# go-over

./: .gitignore  README.md  setup.cfg
demo/source/: goodreads_complement.json  goodreads_library_export.csv
src/go_over/: __init__.py  __main__.py  __setup_gr.py  example_module.py
src/go_over/goodreads/: __init__.py  book.py  bookread.py  bookshelf.py  bookshelfComplement.py  generator.py  loader.py  printer.py  processor.py
src/go_over/tools/: logger.py
src/goodreads_to_blog/: __init__.py  __main__.py
tests/: conftest.py
tests/func/: constants.py  func_test_tools.py  test_one_book.py  test_one_book_complement_file.py  test_one_book_stats.py
tests/func/goodreads/: test_one_book.py  test_one_book_stats.py
tests/func/goodreads/complement_file/: test_comp_file_favourites.py  test_comp_file_force_generation.py  test_comp_file_generation.py  test_comp_file_modification_dates.py  test_comp_file_modification_effect.py  test_one_book_complement_file.py
tests/func/goodreads/to_read/: test_to_read_export.py
tests/unit/: test_book_position.py  test_book_reads.py  test_book_update.py  test_bookreads.py  test_shelf_all_reads.py  test_shelf_read_on_year.py  test_shelf_stats_many_years.py  test_shelf_stats_one_year.py
