[metadata]
name = go-over
version = 0.4.0
author = Jose A. Lobato
author_email = jose.lobato@me.com
description = Converts Goodreads CSV files to custom desing JSON for jekyll blog consumption.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josealobato/go-over
project_urls =
    Bug Tracker = https://github.com/josealobato/go-over/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    go-over = go_over:cli_processor
